fixed form footer spacing

--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ form .row{
 }
 
 .form-footer {
-    padding-top: 15%;
+    padding-top: 10%;
     font-size: 20px;
 }
 
